--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <html>
-<header id="header">
-    <img id="header-img" src="https://cdn.pixabay.com/photo/2012/12/24/08/39/agriculture-72254_960_720.jpg"
-        alt="Stack of potatoes"> <!-- all are images from https://pixabay.com/ -->
-    <nav id="nav-bar">
-        <a class="nav-link" href="#start"> Potatoes from the begning! </a><br>
-        <a class="nav-link" href="#product-information"> More about potatoes! </a><br>
-        <a class="nav-link" href="#pricing"> Buy your potatoes now! </a>
-    </nav>
-</header>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
 
 <body>
+    <header id="header">
+        <img id="header-img" src="https://cdn.pixabay.com/photo/2012/12/24/08/39/agriculture-72254_960_720.jpg"
+            alt="Stack of potatoes"> <!-- all are images from https://pixabay.com/ -->
+        <nav id="nav-bar">
+            <a class="nav-link" href="#start"> Potatoes from the begning! </a><br>
+            <a class="nav-link" href="#product-information"> More about potatoes! </a><br>
+            <a class="nav-link" href="#pricing"> Buy your potatoes now! </a>
+        </nav>
+    </header>
     <section id="start">
         <h1>Potatoes from the begning!</h1> <br>
         <p> From the <a id="wiki-link" href="https://www.wikiwand.com/en/Potato"> <u>Wiki</u> </a> about potatoes: <br>
@@ -87,12 +90,12 @@
 
     </section>
 
+    <footer id="footer">
+        This page was created between 2021-08-14 to 2021-09-07 by Linda Andersson for the Build a Product Landing Page
+        Challange by <a id="second-link" href="https://www.freecodecamp.org/learn"
+            target:="_blank"><u>freeCodeCamp.org</u></a>
+    </footer>
 </body>
 
-<footer id="footer">
-    This page was created between 2021-08-14 to 2021-09-07 by Linda Andersson for the Build a Product Landing Page
-    Challange by <a id="second-link" href="https://www.freecodecamp.org/learn"
-        target:="_blank"><u>freeCodeCamp.org</u></a>
-</footer>
 
 </html>
